// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer creates nested groups 1`] = `
ChildrenMixinStub {
  "children": Array [
    ChildrenMixinStub {
      "children": Array [],
      "parent": [Circular],
      "type": "PAGE",
    },
    ChildrenMixinStub {
      "children": Array [
        ChildrenMixinStub {
          "children": Array [
            ChildrenMixinStub {
              "children": Array [
                LayoutMixinStub {
                  "fills": Array [
                    Object {
                      "color": Object {
                        "b": 0,
                        "g": 1,
                        "r": 0.07058823529411765,
                      },
                      "type": "SOLID",
                    },
                  ],
                  "height": 100,
                  "parent": [Circular],
                  "pluginData": Object {
                    "isReactFigmaNode": "true",
                    "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#12ff00\\"}",
                  },
                  "type": "RECTANGLE",
                  "width": 200,
                },
                LayoutMixinStub {
                  "fills": Array [
                    Object {
                      "color": Object {
                        "b": 0,
                        "g": 1,
                        "r": 0.07058823529411765,
                      },
                      "type": "SOLID",
                    },
                  ],
                  "height": 100,
                  "parent": [Circular],
                  "pluginData": Object {
                    "isReactFigmaNode": "true",
                    "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#12ff00\\"}",
                  },
                  "type": "RECTANGLE",
                  "width": 200,
                },
              ],
              "parent": [Circular],
              "pluginData": Object {
                "isReactFigmaNode": "true",
              },
              "type": "GROUP",
            },
            ChildrenMixinStub {
              "children": Array [
                LayoutMixinStub {
                  "fills": Array [
                    Object {
                      "color": Object {
                        "b": 0,
                        "g": 1,
                        "r": 0.07058823529411765,
                      },
                      "type": "SOLID",
                    },
                  ],
                  "height": 100,
                  "parent": [Circular],
                  "pluginData": Object {
                    "isReactFigmaNode": "true",
                    "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#12ff00\\"}",
                  },
                  "type": "RECTANGLE",
                  "width": 200,
                },
              ],
              "parent": [Circular],
              "pluginData": Object {
                "isReactFigmaNode": "true",
              },
              "type": "GROUP",
            },
          ],
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
          },
          "type": "GROUP",
        },
      ],
      "parent": [Circular],
      "pluginData": Object {
        "isReactFigmaNode": "true",
        "isYogaRoot": "true",
      },
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`renderer creates single group 1`] = `
ChildrenMixinStub {
  "children": Array [
    ChildrenMixinStub {
      "children": Array [],
      "parent": [Circular],
      "type": "PAGE",
    },
    ChildrenMixinStub {
      "children": Array [
        ChildrenMixinStub {
          "children": Array [
            LayoutMixinStub {
              "fills": Array [
                Object {
                  "color": Object {
                    "b": 0,
                    "g": 1,
                    "r": 0.07058823529411765,
                  },
                  "type": "SOLID",
                },
              ],
              "height": 100,
              "parent": [Circular],
              "pluginData": Object {
                "isReactFigmaNode": "true",
                "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#12ff00\\"}",
              },
              "type": "RECTANGLE",
              "width": 200,
            },
          ],
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
          },
          "type": "GROUP",
        },
      ],
      "parent": [Circular],
      "pluginData": Object {
        "isReactFigmaNode": "true",
        "isYogaRoot": "true",
      },
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`renderer insert new component between 1`] = `
ChildrenMixinStub {
  "children": Array [
    ChildrenMixinStub {
      "children": Array [],
      "parent": [Circular],
      "type": "PAGE",
    },
    ChildrenMixinStub {
      "children": Array [
        LayoutMixinStub {
          "fills": Array [
            Object {
              "color": Object {
                "b": 0,
                "g": 1,
                "r": 0.07058823529411765,
              },
              "type": "SOLID",
            },
          ],
          "height": 100,
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#12ff00\\"}",
          },
          "type": "RECTANGLE",
          "width": 200,
        },
        LayoutMixinStub {
          "characters": "test",
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
          },
          "type": "TEXT",
        },
        LayoutMixinStub {
          "fills": Array [
            Object {
              "color": Object {
                "b": 0,
                "g": 0.20784313725490197,
                "r": 1,
              },
              "type": "SOLID",
            },
          ],
          "height": 100,
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#ff3500\\"}",
          },
          "type": "RECTANGLE",
          "width": 200,
        },
      ],
      "parent": [Circular],
      "pluginData": Object {
        "isReactFigmaNode": "true",
        "isYogaRoot": "true",
      },
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`renderer remove component between (equal components) 1`] = `
ChildrenMixinStub {
  "children": Array [
    ChildrenMixinStub {
      "children": Array [],
      "parent": [Circular],
      "type": "PAGE",
    },
    ChildrenMixinStub {
      "children": Array [
        LayoutMixinStub {
          "fills": Array [
            Object {
              "color": Object {
                "b": 1,
                "g": 0.2823529411764706,
                "r": 0,
              },
              "type": "SOLID",
            },
          ],
          "height": 100,
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#0048ff\\"}",
          },
          "type": "RECTANGLE",
          "width": 200,
        },
        LayoutMixinStub {
          "fills": Array [
            Object {
              "color": Object {
                "b": 0,
                "g": 0.20784313725490197,
                "r": 1,
              },
              "type": "SOLID",
            },
          ],
          "height": 100,
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#ff3500\\"}",
          },
          "type": "RECTANGLE",
          "width": 200,
        },
      ],
      "parent": [Circular],
      "pluginData": Object {
        "isReactFigmaNode": "true",
        "isYogaRoot": "true",
      },
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`renderer remove component between 1`] = `
ChildrenMixinStub {
  "children": Array [
    ChildrenMixinStub {
      "children": Array [],
      "parent": [Circular],
      "type": "PAGE",
    },
    ChildrenMixinStub {
      "children": Array [
        LayoutMixinStub {
          "fills": Array [
            Object {
              "color": Object {
                "b": 0,
                "g": 1,
                "r": 0.07058823529411765,
              },
              "type": "SOLID",
            },
          ],
          "height": 100,
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#12ff00\\"}",
          },
          "type": "RECTANGLE",
          "width": 200,
        },
        LayoutMixinStub {
          "fills": Array [
            Object {
              "color": Object {
                "b": 0,
                "g": 0.20784313725490197,
                "r": 1,
              },
              "type": "SOLID",
            },
          ],
          "height": 100,
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#ff3500\\"}",
          },
          "type": "RECTANGLE",
          "width": 200,
        },
      ],
      "parent": [Circular],
      "pluginData": Object {
        "isReactFigmaNode": "true",
        "isYogaRoot": "true",
      },
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`renderer render single component 1`] = `
ChildrenMixinStub {
  "children": Array [
    ChildrenMixinStub {
      "children": Array [
        LayoutMixinStub {
          "fills": Array [
            Object {
              "color": Object {
                "b": 0,
                "g": 1,
                "r": 0.07058823529411765,
              },
              "type": "SOLID",
            },
          ],
          "height": 100,
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "isYogaRoot": "true",
            "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#12ff00\\"}",
          },
          "type": "RECTANGLE",
          "width": 200,
        },
      ],
      "parent": [Circular],
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`renderer rerender single component 1`] = `
ChildrenMixinStub {
  "children": Array [
    ChildrenMixinStub {
      "children": Array [
        LayoutMixinStub {
          "fills": Array [
            Object {
              "color": Object {
                "b": 0,
                "g": 0.20784313725490197,
                "r": 1,
              },
              "type": "SOLID",
            },
          ],
          "height": 100,
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "isYogaRoot": "true",
            "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#ff3500\\"}",
          },
          "type": "RECTANGLE",
          "width": 200,
        },
      ],
      "parent": [Circular],
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`renderer text instance without Text component (with hydration page) 1`] = `
ChildrenMixinStub {
  "children": Array [
    ChildrenMixinStub {
      "children": Array [],
      "parent": [Circular],
      "type": "PAGE",
    },
    ChildrenMixinStub {
      "children": Array [
        LayoutMixinStub {
          "fills": Array [
            Object {
              "color": Object {
                "b": 0,
                "g": 1,
                "r": 0.07058823529411765,
              },
              "type": "SOLID",
            },
          ],
          "height": 100,
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#12ff00\\"}",
          },
          "type": "RECTANGLE",
          "width": 200,
        },
        LayoutMixinStub {
          "fills": Array [
            Object {
              "color": Object {
                "b": 0,
                "g": 0.20784313725490197,
                "r": 1,
              },
              "type": "SOLID",
            },
          ],
          "height": 100,
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#ff3500\\"}",
          },
          "type": "RECTANGLE",
          "width": 200,
        },
      ],
      "parent": [Circular],
      "pluginData": Object {
        "isReactFigmaNode": "true",
        "isYogaRoot": "true",
      },
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`renderer text instance without Text component 1`] = `
ChildrenMixinStub {
  "children": Array [
    ChildrenMixinStub {
      "children": Array [],
      "parent": [Circular],
      "type": "PAGE",
    },
    ChildrenMixinStub {
      "children": Array [
        LayoutMixinStub {
          "fills": Array [
            Object {
              "color": Object {
                "b": 0,
                "g": 1,
                "r": 0.07058823529411765,
              },
              "type": "SOLID",
            },
          ],
          "height": 100,
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#12ff00\\"}",
          },
          "type": "RECTANGLE",
          "width": 200,
        },
        LayoutMixinStub {
          "fills": Array [
            Object {
              "color": Object {
                "b": 0,
                "g": 0.20784313725490197,
                "r": 1,
              },
              "type": "SOLID",
            },
          ],
          "height": 100,
          "parent": [Circular],
          "pluginData": Object {
            "isReactFigmaNode": "true",
            "reactStyle": "{\\"width\\":200,\\"height\\":100,\\"backgroundColor\\":\\"#ff3500\\"}",
          },
          "type": "RECTANGLE",
          "width": 200,
        },
      ],
      "parent": [Circular],
      "pluginData": Object {
        "isReactFigmaNode": "true",
        "isYogaRoot": "true",
      },
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;
